add metrics config in setting.yaml

--- a/setting.yaml.template
+++ b/setting.yaml.template
@@ -36,3 +36,9 @@ credentials:
     name: ******
     apikey: ******
     secretkey: ****** 
+
+# metric
+metrics:
+  - BLENDEDCOST
+  - UNBLENDEDCOST
+  - USAGEQUANTITY
